# nanosamfw

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  csclist.py  dev-requirements.txt  example_device_detection.py  example_odin_device_detection.py  gnsf-GUI.py  gnsf.py  index.html  launch_gui.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  simple_client.py  simple_client2.py  sitemap.xml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs-release.yml
AppIcons/: app_icon.icns
api/app.config/: index.html
api/app.device_monitor/: index.html
api/app.gui/: index.html
api/device.errors/: index.html
app/: README.md  __init__.py  __main__.py  config.py  config.toml  device_monitor.py  gui.py  progress_tracker.py  ui_builder.py  ui_updater.py
build-tools/: macos_arm_build.sh  wine_windows_build.sh
device/: __init__.py  at_client.py  detector.py  device_command.py  errors.py  models.py  odin_client.py  protocol.py  reader.py  reader_at.py  serial_tool.py
docs/: gui-architecture.md  index.md
download/: __init__.py  config.py  db.py  firmware_repository.py  imei_repository.py  repository.py  service.py
fus/: __init__.py  client.py  config.py  crypto.py  csclist.py  decrypt.py  deviceid.py  errors.py  firmware.py  messages.py  responses.py
gnfs/: gnsf.py
gui-architecture/: index.html
manual/: Manuel_NanoSamFW_fr.docx  Mode_Operatoire_Flash_Odin_fr.docx
search/: search_index.json
site/: 404.html  index.html  objects.inv
tools/: windows_build.ps1
(+74 files in other folders)
